PROJ-1 Made the table design more compact and fixed an issue with the "jumping" scroll position

--- a/src/packages/ui/table/table.component.module.scss
+++ b/src/packages/ui/table/table.component.module.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/variables';
 @import '../../../styles/themes/dark';
 
-$cell-padding-vertical: 0.5 * $spacing;
+$cell-padding-vertical: 0.25 * $spacing;
 $cell-padding-horizontal: 2 * $spacing;
 $cell-padding-horizontal-edge: 5 * $spacing;
 
